--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ img{
   width=300px;
 }
 p{
-   text-align: center; color: #0099ff;
+   text-align: center; 
+   color: #0099ff;
 }
 h2{
-   text-align: center; color: #00cca3;
+   text-align: center; 
+   color: #00cca3;
 }
