--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ p{
    text-align: center; 
    color: #0099ff;
    font-weight: 600;
+   font-stretch: extra-condensed;
 }
 h2{
    text-align: center; 
