--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ p{
 h2{
    text-align: center; 
    color: #00cca3;
-   font-style:Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif
+   font-style:Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+   font-weight: 600;
 }
 h1{
    text-align: center; 
    color: #45d3e0;
-   fot-style:Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif
+   fot-style:Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+   font-weight: bold;
 }
