--- a/style.css
+++ b/style.css
@@ -8,17 +8,17 @@ p{
    color: #0099ff;
    font-weight: 600;
    font-stretch: extra-condensed;
-   font-family: 'Indie Flower', cursive;, sans-serif;
+   font-family: 'Indie Flower', cursive;
 }
 h2{
    text-align: center; 
    color: #00cca3;
-   font-family: 'Indie Flower', cursive;, sans-serif;
+   font-family: 'Indie Flower', cursive;
    font-weight: 600;
 }
 h1{
    text-align: center; 
    color: #45d3e0;
-   font-family: 'Indie Flower', cursive;, sans-serif;
+   font-family: 'Indie Flower', cursive;
    font-weight: bold;
 }
