--- a/style.css
+++ b/style.css
@@ -22,3 +22,8 @@ h1{
    font-family: 'Indie Flower', cursive;
    font-weight: bold;
 }
+h3{
+   text-aline: auto
+   color:  #45d3e0;
+   font-family: 'Indie Flower', cursive;
+}
