--- a/style.css
+++ b/style.css
@@ -38,3 +38,13 @@ a{
 body{
    background-color : #020202;
 }
+#nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 60px;
+} 
+
+.nav a {
+    display: block;
+}
