--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 900px;
+    width: 100%;
    border: 1px solid #45de0;
 } 
 
