--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
-   border: 1px solid #45de0;
-} 
+    border: 1px solid #00bbef;
+}  
 
 .nav a {
     display: block;
